Bug 411159 - lines appear with the 'sharpen', 'mean removal' filter layers
Summary: lines appear with the 'sharpen', 'mean removal' filter layers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 4.2.5
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: triaged
: 412492 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-22 10:51 UTC by acc4commissions
Modified: 2019-11-05 17:18 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
capture (3.24 KB, image/png)
2019-08-22 10:51 UTC, acc4commissions
Details

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2019-08-22 10:51:53 UTC
Created attachment 122289 [details]
capture

SUMMARY
If you make sharpen filter layer or mean removel filter layer, some lines appear over the canvas, as if the canvas is devided into tiles.

STEPS TO REPRODUCE
1. make a document and make any color-filled layer.
2. make sharpen filter layer or mean removel filter layer over it.

OBSERVED RESULT
lines appear.

EXPECTED RESULT
no lines.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

It doesn't seem happen when you make the document from existing image file.
Comment 1 Halla Rempt 2019-08-22 10:58:42 UTC
Hm, I cannot reproduce that. What size is the image you're working on, and in which color model/channel depth?
Comment 2 acc4commissions 2019-08-22 11:04:47 UTC
Happens with all sizes, and the color setting is just default.
Model : RGB/Alpha
Depth : 8-bit integer/channel

Tiles are reletively bitter with small sized documents though.
Comment 3 Halla Rempt 2019-08-22 11:20:25 UTC
Okay... I still cannot reproduce on Linux or on Windows (didn't check macOS). Could you attach the output of help/system information for bug reports as well?  Maybe there's something about your hardware that makes krita choose a different convolution implementation...
Comment 4 acc4commissions 2019-08-22 13:01:34 UTC
(In reply to acc4commissions from comment #2)
> 
> Tiles are reletively bitter with small sized documents though.

* bitter -> bigger


(In reply to Boudewijn Rempt from comment #3)
> Okay... I still cannot reproduce on Linux or on Windows (didn't check
> macOS). Could you attach the output of help/system information for bug
> reports as well?  Maybe there's something about your hardware that makes
> krita choose a different convolution implementation...

SESSION: 22 Aug 2019 21:58:23 +0900. Executing C:\Program Files\Krita (x64)\bin\krita.exe

WARNING: This file contains information about your system and the
images you have been working with.

If you have problems with Krita, the Krita developers might ask
you to share this file with them. The information in this file is
not shared automatically with the Krita developers in any way. You
can disable logging to this file in Krita's Configure Krita Dialog.

Please review the contents of this file before sharing this file with
anyone.

Krita

 Version: 4.2.5
 Languages: en_US
 Hidpi: false

Qt

  Version (compiled): 5.12.4
  Version (loaded): 5.12.4

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 6.1.7601
  Pretty Productname: Windows 7 SP 1 (6.1)
  Product Type: windows
  Product Version: 7sp1


Hardware Information

  GPU Acceleration: auto
  Memory: 16351 Mb
  Number of Cores: 8
  Swap Location: C:/Users/Waterbird/AppData/Local/Temp

22 Aug 2019 21:58:38 +0900: Created image "Unnamed", 4960 * 3508 pixels, 72 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 1
22 Aug 2019 21:58:38 +0900: Instant Preview Setting: 0
22 Aug 2019 21:58:38 +0900: Enabled simple smoothing.
22 Aug 2019 21:58:38 +0900: Enabled simple smoothing.
22 Aug 2019 21:58:38 +0900: Enabled simple smoothing.
22 Aug 2019 21:58:38 +0900: Enabled simple smoothing.
22 Aug 2019 21:58:38 +0900: Enabled simple smoothing.
22 Aug 2019 21:58:38 +0900: Enabled simple smoothing.
22 Aug 2019 21:58:38 +0900: Instant Preview Setting: 0
22 Aug 2019 21:58:39 +0900: Instant Preview Setting: 0
Comment 5 Bug Janitor Service 2019-08-23 04:33:09 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 6 vanyossi 2019-08-25 14:57:24 UTC
I cannot reproduce this one either on 4.2.5 (macOS)
Comment 7 Halla Rempt 2019-08-27 11:49:20 UTC
I tried to disable the fftw3 convolution system to see whether the fallback would cause this issue, and that didn't reproduce it either. I don't see anything weird about your log either :-(
Comment 8 Lynx3d 2019-09-05 03:01:44 UTC
I have been able to reproduce it, it has to do with opaque canvas background.

Steps to reproduce:
1) Open a "Create new document..." dialog
2) Choose a resolution is larger than 512x512, e.g. 1600x1200
3) In the Content tab, chose "canvas color" instead of the default "as raster layer" and go with the default white background color
4) After creating the document, fill the empty layer with some light color (not black)
5) Add a sharpening filter layer
You should now see grid lines every 512 pixels
Comment 9 Halla Rempt 2019-09-05 08:47:21 UTC
Thanks! With those steps I can reproduce and confirm the bug.
Comment 10 acc4commissions 2019-10-10 11:28:19 UTC
Um... This seems to happen with the raster layer background settings too. (Both 4.2.7, Nightly git 56ee905)
Comment 11 wolthera 2019-10-14 14:09:51 UTC
*** Bug 412492 has been marked as a duplicate of this bug. ***
Comment 12 wolthera 2019-10-14 14:10:41 UTC
And also happen with emboss.
Comment 13 Dmitry Kazakov 2019-10-14 15:52:57 UTC
Git commit 8c5cf8df4b8b165dfe55944216a057c49c72e203 by Dmitry Kazakov.
Committed on 14/10/2019 at 15:52.
Pushed by dkazakov into branch 'master'.

Fix legacy convolution filters on images with non-transparent background

All convolution filters should have neededRect adn changedRect. They
worked previously only due to a happy mathematical coincidence :)

M  +18   -0    plugins/filters/convolutionfilters/kis_convolution_filter.cpp
M  +4    -0    plugins/filters/convolutionfilters/kis_convolution_filter.h
M  +15   -0    plugins/filters/imageenhancement/kis_simple_noise_reducer.cpp
M  +4    -0    plugins/filters/imageenhancement/kis_simple_noise_reducer.h

https://invent.kde.org/kde/krita/commit/8c5cf8df4b8b165dfe55944216a057c49c72e203
Comment 14 Dmitry Kazakov 2019-11-05 17:18:20 UTC
Git commit a95b18776c784bbf3156176edf19ebd78c0eb1ac by Dmitry Kazakov.
Committed on 05/11/2019 at 17:18.
Pushed by dkazakov into branch 'krita/4.2'.

Fix legacy convolution filters on images with non-transparent background

All convolution filters should have neededRect adn changedRect. They
worked previously only due to a happy mathematical coincidence :)

M  +18   -0    plugins/filters/convolutionfilters/kis_convolution_filter.cpp
M  +4    -0    plugins/filters/convolutionfilters/kis_convolution_filter.h
M  +15   -0    plugins/filters/imageenhancement/kis_simple_noise_reducer.cpp
M  +4    -0    plugins/filters/imageenhancement/kis_simple_noise_reducer.h

https://invent.kde.org/kde/krita/commit/a95b18776c784bbf3156176edf19ebd78c0eb1ac