Fix legacy convolution filters on images with non-transparent background

All convolution filters should have neededRect adn changedRect. They
worked previously only due to a happy mathematical coincidence :)

BUG:411159